[gd_scene load_steps=28 format=2]

[ext_resource path="res://Instanciaveis/Inimigos/Inimigo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Conteudos/Shaders/ShaderPersonagem.shader" type="Shader" id=2]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto14.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto6.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto16.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto11.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto5.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto12.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto7.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto18.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto9.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto13.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto8.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto10.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto17.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/FantasmaFaminto/FantasmaFaminto15.png" type="Texture" id=20]
[ext_resource path="res://Instanciaveis/Scripts/OuvintoDeEventosFantasmaFaminto.gd" type="Script" id=21]
[ext_resource path="res://Instanciaveis/Estados/Inimigo/Aguardo.tscn" type="PackedScene" id=22]
[ext_resource path="res://Instanciaveis/Estados/Inimigo/Seguir.tscn" type="PackedScene" id=23]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/brilho_purificacao = 5.0
shader_param/progresso_purificacao = 0.0
shader_param/coeficiente_mix_dano = 0.0
shader_param/cor_purificacao = Color( 0.360784, 0.847059, 1, 1 )
shader_param/cor_dano = Color( 1, 0, 0, 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 11 ) ],
"loop": true,
"name": "andando_costas",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 4 ) ],
"loop": true,
"name": "andando_frente",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 3 ), ExtResource( 20 ), ExtResource( 5 ), ExtResource( 19 ), ExtResource( 14 ) ],
"loop": true,
"name": "andando_lado",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 4 ) ],
"loop": true,
"name": "parado",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 94.2019

[sub_resource type="CircleShape2D" id=3]
radius = 7.07107

[node name="Inimigo" instance=ExtResource( 1 )]
purificacao_maxima = 2.0
velocidade = 2000.0

[node name="Sprite" parent="." index="1"]
material = SubResource( 1 )
frames = SubResource( 2 )
animation = "parado"

[node name="OuvintoEventosFantasmaFaminto" type="Node" parent="." index="2"]
script = ExtResource( 21 )

[node name="AreaVisao" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 128
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaVisao" index="0"]
shape = SubResource( 4 )

[node name="AreaDano" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 128
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDano" index="0"]
shape = SubResource( 3 )

[node name="Seguir" parent="GerenciadorEstados" index="2" instance=ExtResource( 23 )]

[node name="Aguardo" parent="GerenciadorEstados" index="3" instance=ExtResource( 22 )]

[connection signal="area_entered" from="AreaVisao" to="OuvintoEventosFantasmaFaminto" method="_on_AreaVisao_area_entered"]
[connection signal="area_exited" from="AreaVisao" to="OuvintoEventosFantasmaFaminto" method="_on_AreaVisao_area_exited"]
[connection signal="area_entered" from="AreaDano" to="OuvintoEventosFantasmaFaminto" method="_on_AreaDano_area_entered"]
[connection signal="area_exited" from="AreaDano" to="OuvintoEventosFantasmaFaminto" method="_on_AreaDano_area_exited"]
